--- a/.github/workflows/terraform-apply-test.yaml
+++ b/.github/workflows/terraform-apply-test.yaml
@@ -96,7 +96,7 @@ jobs:
 
   pr-release:
     runs-on: ubuntu-latest
-    needs: apply
+    #needs: apply
     timeout-minutes: 5
     permissions:
       id-token: write
