--- a/.github/workflows/terraform-apply-test.yaml
+++ b/.github/workflows/terraform-apply-test.yaml
@@ -103,29 +103,29 @@ jobs:
       contents: read
       pull-requests: write
       repository-projects: read
+    if: contains(github.base_ref, 'master') && ${{ !endsWith(github.head_ref, '-ug') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Generate Token
-        id: generate_token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.GHA_APP_ID }}
-          private_key: ${{ secrets.GHA_PRIVATE_KEY }}
-          # Optional (defaults to ID of the repository's installation).
-          # installation_id: 1337
-          # Optional (defaults to the current repository).
-          # repository: "owner/repo"
+      # - name: Generate Token
+      #   id: generate_token
+      #   uses: tibdex/github-app-token@v1
+      #   with:
+      #     app_id: ${{ secrets.GHA_APP_ID }}
+      #     private_key: ${{ secrets.GHA_PRIVATE_KEY }}
+      #     # Optional (defaults to ID of the repository's installation).
+      #     # installation_id: 1337
+      #     # Optional (defaults to the current repository).
+      #     # repository: "owner/repo"
 
       - name: git-pr-release master to main
         # 末尾が*-ugのブランチは git-pr-releaseに含めない
-        if: contains(github.base_ref, 'master') && ${{ !endsWith(github.head_ref, '-ug') }}
         uses: bakunyo/git-pr-release-action@v1.4
         env:
-          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_PR_RELEASE_BRANCH_PRODUCTION: main
           GIT_PR_RELEASE_BRANCH_STAGING: master
           GIT_PR_RELEASE_LABELS: stag/prod-release
