--- a/.github/workflows/terraform-apply-test.yaml
+++ b/.github/workflows/terraform-apply-test.yaml
@@ -103,7 +103,7 @@ jobs:
       contents: read
       pull-requests: write
       repository-projects: read
-    if: contains(github.base_ref, 'master') && ${{ !endsWith(github.head_ref, '-ug') }}
+    if: contains(github.base_ref, 'master') && !endsWith(github.head_ref, '-ug')
     steps:
       - name: Checkout
         uses: actions/checkout@v3
