--- a/.github/workflows/terraform-manual-test.yaml
+++ b/.github/workflows/terraform-manual-test.yaml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set env to stag
+        continue-on-error: true
         if: ${{ inputs.environment }} == "stag"
         run: |
           echo "TERRAFORM_WORKSPACE=stag" >> $GITHUB_ENV
@@ -45,6 +46,7 @@ jobs:
           #echo "SLACK_CHANNEL_ID=nst-cicd-notify-stag" >> $GITHUB_ENV
 
       - name: Set env to prod
+        continue-on-error: true
         if: ${{ inputs.environment }} == "prod"
         run: |
           echo "TERRAFORM_WORKSPACE=prod" >> $GITHUB_ENV
@@ -53,6 +55,7 @@ jobs:
           echo "SLACK_CHANNEL_ID=nst-cicd-notify-prod" >> $GITHUB_ENV
 
       - name: Configure AWS Credentials
+        continue-on-error: true
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
           aws-region: ap-northeast-1
@@ -60,11 +63,13 @@ jobs:
           role-session-name: ci-terraform
 
       - name: Setup tfnotify
+        continue-on-error: true
         run: |
           sudo curl -fL -o tfnotify.tar.gz https://github.com/mercari/tfnotify/releases/download/v0.7.0/tfnotify_linux_amd64.tar.gz
           sudo tar -C /usr/bin -xzf ./tfnotify.tar.gz
 
       - name: Terraform Setup
+        continue-on-error: true
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.2.6
@@ -75,6 +80,7 @@ jobs:
         continue-on-error: false
 
       - name: Terraform Init
+        continue-on-error: true
         id: init
         run: terraform init -backend-config="bucket=${{ env.TFSATTE_BUCKET_NAME }}"
         env:
@@ -84,6 +90,7 @@ jobs:
             && ssh -i ./id_rsa -o UserKnownHostsFile=./known_hosts"
 
       - name: Terraform Workspace Select
+        continue-on-error: true
         id: select
         run: terraform workspace select ${{ env.TERRAFORM_WORKSPACE }}
 
@@ -93,6 +100,7 @@ jobs:
         continue-on-error: false
 
       - name: TFLint
+        continue-on-error: true
         uses: reviewdog/action-tflint@v1.17.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -104,12 +112,14 @@ jobs:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Terraform Plan
+        continue-on-error: true
         if: ${{ inputs.plan_or_apply }} == "plan"
         id: plan
         run: |
           terraform plan -var-file env/${{ env.TERRAFORM_WORKSPACE }}.tfvars -lock=false -no-color 
   
       - name: Terraform Apply
+        continue-on-error: true
         if: ${{ inputs.plan_or_apply }} == "apply"
         id: apply
         run: |
