--- a/.github/workflows/terraform-apply-test.yaml
+++ b/.github/workflows/terraform-apply-test.yaml
@@ -57,7 +57,7 @@ jobs:
       - name: Terraform Format
         id: fmt
         run: terraform fmt -check -recursive
-        continue-on-error: false
+        continue-on-error: true
 
       - name: Terraform Init
         continue-on-error: true
