--- a/.github/workflows/terraform-manual-test.yaml
+++ b/.github/workflows/terraform-manual-test.yaml
@@ -115,14 +115,14 @@ jobs:
       
       - name: Terraform Plan
         continue-on-error: true
-        if: ${{ github.event.inputs.plan_or_apply }} == "plan"
+        if: ${{ github.event.inputs.plan_or_apply == "plan" }}
         id: plan
         run: |
           terraform plan -var-file env/${{ env.TERRAFORM_WORKSPACE }}.tfvars -lock=false -no-color 
   
       - name: Terraform Apply
         continue-on-error: true
-        if: ${{ github.event.inputs.plan_or_apply }} == "apply"
+        if: ${{ github.event.inputs.plan_or_apply == "apply" }}
         id: apply
         run: |
           terraform apply -var-file env/${{ env.TERRAFORM_WORKSPACE }}.tfvars -auto-approve >> apply_result.temp
